# packaging_demo

./: README.md  add_supporting_files.html  automate_tests.html  code_docs.html  dev_requirements  documentation.html  examples.html  genindex.html  gh_workflows_CI.html  index.html  objects.inv  package_setup.html  py-modindex.html  readme.md  repo_creation.html  search.html  searchindex.js  set_up_environment.html  setup.cfg  testing.html  uploading.html
MyPackage/: __init__.py  sine_wave_utilities.py
_sources/: documentation.md.txt  examples.md.txt  set_up_environment.md.txt  testing.md.txt
docs/: .buildinfo  add_supporting_files.html  automate_tests.html  code_docs.html  documentation.html  examples.html  genindex.html  index.html  objects.inv  package_setup.html  packaging.html  py-modindex.html  repo_creation.html  search.html  searchindex.js  set_up_environment.html  sphinx_setup.html  testing.html  uploading.html
docsrc/: Makefile  add_supporting_files.md  automate_tests.md  code_docs.rst  conf.py  documentation.md  examples.md  gh_workflows_CI.md  index.rst  package_setup.md  packaging.md  repo_creation.md  set_up_environment.md  testing.md  uploading.md
doctrees/: add_supporting_files.doctree  automate_tests.doctree  code_docs.doctree  documentation.doctree  environment.pickle  examples.doctree  gh_workflows_CI.doctree  index.doctree  package_setup.doctree  packaging.doctree  repo_creation.doctree  set_up_environment.doctree  sphinx_setup.doctree  testing.doctree  uploading.doctree
examples/: demonstrate_sine_plotter.py  readme.md
html/: .buildinfo  (+17 more)
(+59 files in other folders)
